// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert - danger Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample danger alert"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Sample danger alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for danger"
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Custom aria label for danger"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Description 1`] = `
<Alert
  title=""
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Title 1`] = `
<Alert
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="danger toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="danger"
>
  <div
    aria-atomic="false"
    aria-label="danger toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-inline pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Alert-danger-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample default alert"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Sample default alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-13"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-14"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for default"
  title="Some title"
  variant="default"
>
  <div
    aria-label="Custom aria label for default"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-15"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Description 1`] = `
<Alert
  title=""
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Title 1`] = `
<Alert
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="default toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="default"
>
  <div
    aria-atomic="false"
    aria-label="default toast alert"
    aria-live="polite"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Generated-Alert-default-9"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert pf-m-inline"
    data-ouia-component-id="OUIA-Generated-Alert-default-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 896 1024"
            width="1em"
          >
            <path
              d="M448,0 C465.334,0 480.334,6.333 493,19 C505.667,31.667 512,46.667 512,64 L512,106 L514.235,106.446 C587.892,121.389 648.48,157.24 696,214 C744,271.333 768,338.667 768,416 C768,500 780,568.667 804,622 C818.666,652.667 841.333,684 872,716 C874.666,720 876.666,722.666 878,724 C890,737.333 896,752.333 896,769 C896,785.666 890,800.333 878,813 C866,825.666 850.666,832 832,832 L63.302,832 C44.951,831.841 29.85,825.508 18,813 C6,800.333 0,785.666 0,769 C0,752.333 6,737.333 18,724 L24,716 L25.055,714.896 C55.187,683.279 77.502,652.314 92,622 C116,568.666 128,500 128,416 C128,338.667 152,271.333 200,214 C248,156.667 309.333,120.667 384,106 L384,64 L384.003,63.308 C384.17,46.267 390.502,31.498 403,19 C415.667,6.333 430.667,0 448,0 L448,0 Z M576,896 L575.996,897.078 C575.745,932.605 563.08,962.58 538,987 C512.667,1011.666 482.667,1024 448,1024 C413.333,1024 383.333,1011.666 358,987 C332.666,962.333 320,932 320,896 L576,896 Z"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample info alert"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Sample info alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-10"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-11"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for info"
  title="Some title"
  variant="info"
>
  <div
    aria-label="Custom aria label for info"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-12"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Description 1`] = `
<Alert
  title=""
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Title 1`] = `
<Alert
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="info toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="info"
>
  <div
    aria-atomic="false"
    aria-label="info toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Generated-Alert-info-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample success alert"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Sample success alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for success"
  title="Some title"
  variant="success"
>
  <div
    aria-label="Custom aria label for success"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Description 1`] = `
<Alert
  title=""
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Title 1`] = `
<Alert
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="success toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="success"
>
  <div
    aria-atomic="false"
    aria-label="success toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-inline pf-m-success"
    data-ouia-component-id="OUIA-Generated-Alert-success-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample warning alert"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Sample warning alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for warning"
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Custom aria label for warning"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Description 1`] = `
<Alert
  title=""
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Title 1`] = `
<Alert
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="warning toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="warning"
>
  <div
    aria-atomic="false"
    aria-label="warning toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-inline pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Alert-warning-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;
